fix for include errors

--- a/timeline.html
+++ b/timeline.html
@@ -10,11 +10,11 @@ index: 2
 <div class="row typo">
   <div class="col-md-9" >
     {% assign posts_list = site.posts %}  
-    {% include codepiano/timeline %}
+    {% include timeship/timeline %}
   </div>
   <div id="time-list-nav" class="col-md-3">
     <ul id="time-list-ul" class="nav nav-tabs nav-stacked time-list affix">
-      {% include codepiano/time_list %}
+      {% include timeship/time_list %}
       {% assign posts_list = nil %}
     </ul>
   </div>
