--- a/timeline.html
+++ b/timeline.html
@@ -5,7 +5,7 @@ header: Posts By Time
 group: navigation
 index: 2
 ---
-{% include codepiano/setup %}
+{% include timeship/setup %}
 
 <div class="row typo">
   <div class="col-md-9" >
